@@ -68,7 +68,7 @@ END_CONNECTION_POINT_MAP()
 STANDARD_DISPATCH_DECLARE
 STANDARD_EDITABLE_DECLARES(eItemKicker)
 
-DECLARE_REGISTRY_RESOURCEID(IDR_Kicker)
+DECLARE_REGISTRY_RESOURCEID(IDR_KICKER)
 // ISupportsErrorInfo
 	STDMETHOD(InterfaceSupportsErrorInfo)(REFIID riid);
 
